Fix: User types & validate Middleware - change some user types name. - add role type to user types. - change returned user properties in user model. - change user validation error messages. - update user model and handler specs with the new changes.
